gh-2946 Remove processing flag from SQL_STAT_VAL_SRC